Update .env.example with missing variables

--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,19 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Immich Configuration
+IMMICH_URL=
+IMMICH_KEY=
+
+# LLM Configuration
+LLM_ENABLED=false
+LLM_ENDPOINT=
+LLM_KEY=
+LLM_MODEL=gpt-3.5-turbo
+
+# Third Party Services
+POSTMARK_API_KEY=
+RESEND_API_KEY=
+SLACK_BOT_USER_OAUTH_TOKEN=
+SLACK_BOT_USER_DEFAULT_CHANNEL=
