--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -10,6 +10,7 @@ RUN apt-get update && apt-get install -y \
     zip \
     unzip \
     libzip-dev \
+    libicu-dev \
     default-mysql-client
 
 # Clear cache
