Update Dockerfile: Install Node.js, npm, and Composer dependencies during build

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -11,7 +11,13 @@ RUN apt-get update && apt-get install -y \
     unzip \
     libzip-dev \
     libicu-dev \
+    libzip-dev \
+    libicu-dev \
     default-mysql-client
+
+# Install Node.js
+RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - && \
+    apt-get install -y nodejs
 
 # Clear cache
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
@@ -24,6 +30,16 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 # Set working directory
 WORKDIR /var/www
+
+# Copy files
+COPY . .
+
+# Install PHP dependencies
+ENV COMPOSER_ALLOW_SUPERUSER=1
+RUN composer install --no-interaction --optimize-autoloader
+
+# Install Node dependencies and build
+RUN npm install && npm run build
 
 # Create a user to run Composer and Artisan Commands
 # Arguments defined in docker-compose.yml
