Fix volume mounting: Protect vendor and node_modules from host override

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
         working_dir: /var/www
         volumes:
             - ./:/var/www
+            - /var/www/vendor
+            - /var/www/node_modules
         networks:
             - diary-network
         depends_on:
@@ -32,6 +34,8 @@ services:
         command: php artisan schedule:work
         volumes:
             - ./:/var/www
+            - /var/www/vendor
+            - /var/www/node_modules
         networks:
             - diary-network
         depends_on:
@@ -53,6 +57,8 @@ services:
         command: php artisan queue:work
         volumes:
             - ./:/var/www
+            - /var/www/vendor
+            - /var/www/node_modules
         networks:
             - diary-network
         depends_on:
@@ -68,6 +74,8 @@ services:
             - "8000:80"
         volumes:
             - ./:/var/www
+            - /var/www/vendor
+            - /var/www/node_modules
             - ./docker/nginx/conf.d:/etc/nginx/conf.d
         networks:
             - diary-network
